2.1.0-alpha
* Fix: Card: Layout issue for long names (#10)
* Fix: Hostility Status is missing by Mobility/Survivability (#11)
* Fix: Weapons Free Zone (WFZ) is displayed only as a normal area (#15)
* Fix: Area symbols missing (#21)

0.0.2
* Added some command to edit text modifiers to command palette.

0.0.1
* Removed snap interaction due to update issue.
* Boundaries/Echelons are no displayed.
* Fix: FTS issue with leading numbers in filter.
* Highlight layers/features; Mouse down/up on scope tags. Supports multiselect.
* Fix: Direction of Attack as Multi-point, n >= 2 (#7)
* Updated dependencies
  - @babel/eslint-parser @ 7.15.7
  - electron @ 14.0.1
  - eslint-plugin-react @ 7.25.2
  - webpack @ 5.53.0
  - webpack-dev-server @ 4.2.1

0.0.0
* Sidebar/list - Changed editing behavior:
  - Removed mouse over/hover effect on option title
  - Click on title no longer initiates title editing
  - F2 key: initiate editing of option title
  - Enter key: toggle edititng of option title; save title
  - Escape key: cancel editing (if active); reset title
  - Escape key: deselect options (if ongoing editing)
  - On focus lost: stop editing; save title
* Sidebar/list - Fixed possible endless loop on selection.
* Sidebar/list - Avoid scrolling to focused option after SELECT/ALL.
* Keep selection in sidebar when hiding layers/features.
* Draw - Limit MINE CLUSTER to two points.
* Hide/show features and layers; individual and selected.
* Fix: Draw interaction for 2-point graphics (#3).
* Delete - Layers/features/links from list.
* Delete - Features from map.
* Delete - Shortcuts. DELETE key and CMD/CTRL-BACKSPACE.
* Fix: Resolved issue with duplicate entries in symbol palette.
* Fix: Symbol "Breach" (area Tasks) is wrong displayed on the map (#5)
* Transfer active/default layer from legacy projects.
* Links (ex. references) - Drag'n drop for layers and features.
* Fix: Tagging - Only support alphanumeric characters and '/' in tag names (#1)