@@ -3,6 +3,8 @@
 * Fix: Hostility Status is missing by Mobility/Survivability (#11)
 * Fix: Weapons Free Zone (WFZ) is displayed only as a normal area (#15)
 * Fix: Area symbols missing (#21)
+* New: Feature Bridgehead (Line) (#24)
+* New: Aligned labeling for Holding/Release Line with 2525D  (#24)
 
 0.0.2
 * Added some command to edit text modifiers to command palette.
